Fixed position of issue count circle over the icon on mobile res

--- a/src/main/resources/assets/styles/publish/issue-button.less
+++ b/src/main/resources/assets/styles/publish/issue-button.less
@@ -77,7 +77,7 @@
     }
 
     .issue-count {
-      left: 26px;
+      left: 29px;
     }
   }
 }
